tdf#128290 add tblLayout element to docx export

This will disable the automatic table width feature of MS Word, which
does not exist in LO.
Now, tables in LO-generated docx have the same column width in MS
Word

Change-Id: I955c8e5667376475e7c41e3b74d88e3513fec561